-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.11.0
-
3
-
9223372036854775807
mdd_changelog_data_store_by_fid() uses lu_ucred() but only part of the function is aware that the return value may be NULL.This issue is more or less a duplicate of LU-5938 (at least the fix is similar).
Here is a failed test run that ran into the issue (and more precisely, here is thelog file that highlights the issue).